--- a/AR-Armada/css/styles.css
+++ b/AR-Armada/css/styles.css
@@ -20,4 +20,13 @@
   #stickyButton:hover {
     background-color: #45a049;
   }
+
+  canvas{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+  }
   
