Bloquear popup scroll

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@
   /* Verde */
   --color4: #252525;
   /* Amarillo */
-  --color5: #9b59b6;
+  --color5: #387c59;
   /* Púrpura */
   --color6: #3b2c13;
   /* blanco */
