--- a/CSS/musica.css
+++ b/CSS/musica.css
@@ -3,7 +3,7 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: var(--color2);
+    background-color: var(--color3);
     color: white;
     border-radius: 50%;
     padding: 15px;
@@ -11,9 +11,11 @@
     cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     z-index: 1000;
+    filter: drop-shadow(5px 4px 3px rgba(0, 0, 0, 0.3));
+
 }
 
 /* Efecto cuando el botón está activo (puedes cambiarle el color si lo deseas) */
 .floating-button-music.active {
-    background-color: var(--color1);
+    background-color: var(--color5);
 }
