--- a/CSS/histoy.CSS
+++ b/CSS/histoy.CSS
@@ -30,8 +30,8 @@
 
 .barcoimg {
     position: absolute;
-    width: 80px;
-    height: 80px;
+    width: var(--font-size-h2);
+    height: var(--font-size-h2);
     background-color: #ccc;
     display: block;
     text-align: center;
