--- a/css/style.css
+++ b/css/style.css
@@ -219,10 +219,10 @@ body {
   /* Hace que el fondo se repita en el eje vertical */
 
   width: 100%;
- 
+
   /* Oculta cualquier desbordamiento horizontal */
   margin: 0;
-  
+
   overflow-x: hidden;
 }
 
@@ -259,7 +259,7 @@ h2 {
   font-family: 'HTOWERT';
   color: var(--color1);
 
-  
+
   text-align: center;
   margin-top: 20px;
 }
@@ -378,7 +378,7 @@ button.btn-transparent i {
 
 /* Botón con fondo color1 */
 .btn-secondary {
-  
+
   font-size: 0.7rem;
   width: fit-content;
   background-color: var(--color1);
@@ -426,4 +426,18 @@ figcaption:hover {
   /* Efecto hover para hacerlo más oscuro al pasar el mouse */
 }
 
+.HistoryDerechos {
 
+  font-size: calc(var(--font-size-p) *0.9);
+  color: var(--color6);
+  line-height: 1.5;
+  /* Espaciado de línea */
+  margin-bottom: 0.5em;
+  /* Esp
+  acio inferior */
+}
+
+.HistoryDerechos a {
+
+  font-size: calc(var(--font-size-p) *0.9);
+}
